<resources>
    <string name="app_name">Patnership Cricket League</string>
    <string name="txt_pcl">Patnership Cricket League</string>
    <string name="txt_welcome">Welcome to PCL</string>
    <string name="txt_new_tournment">New Tournament</string>
    <string name="txt_load_tournment">Load Tournament</string>
    <string name="txt_tournment">Tournament</string>
    <string name="title_home">Home</string>
    <string name="title_teams">Teams</string>
    <string name="title_matches">Matches</string>
    <string name="title_points">Points</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_players">Players</string>
    <string name="title_tournaments">Tournaments</string>
    <string name="title_start_match">Match Details</string>

    <!--Create new Tournament Activity -->
    <string name="txt_create_tournament">Create Tournament</string>
    <string name="txt_tournament_name">Tournament Name *</string>
    <string name="txt_location">Location</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_end_date">End Date</string>

    <!-- Home Page Text -->
    <string name="txt_no_tournament">No Tournament</string>
    <string name="txt_no_team">No Team</string>
    <string name="txt_no_team_discripion">Add a team by clicking below button.</string>
    <string name="txt_no_tournament_discripion">Add a tournament by clicking below button.</string>
    <string name="txt_create_team">Create a Team</string>
    <string name="txt_start_match">Schedule Match</string>
    <string name="txt_add_team_discription">Add teams to the tournament to start match</string>
    <string name="txt_go_to_add_team">Go to \'Add Team \' tab</string>
    <string name="txt_top_players">Top Players</string>
    <string name="txt_most_run">Most Runs</string>
    <string name="txt_most_wickets">Most Wickets</string>
    <string name="txt_player_name">Player Name</string>
    <string name="txt_create_player">Create a Player</string>
    <string name="txt_no_match">No Matches</string>
    <string name="txt_start_match_description">Start match or create fixture in this tournament</string>

    <string name="txt_match_played">Matches Played</string>
    <string name="txt_match_won">Matches Won</string>

    <string name="txt_no_players">No Players</string>
    <string name="txt_new_player_description">You can create new Playes by clicking below button</string>
    <string name="txt_create_players">Create Player</string>
    <string name="txt_highest_score">Highest Score</string>
    <string name="txt_best_bowl">Best Bowl</string>
    <string name="txt_most_sixes">Most Sixes</string>
    <string name="txt_most_fours">Most Fours</string>
    <string name="txt_stumpings">Stumpings</string>
    <string name="txt_catches">Catches</string>
    <string name="txt_venue">Venue</string>
    <string name="txt_over">Overs</string>
    <string name="txt_wickets">Wickets</string>
    <string name="txt_won_toss">Who won the toss</string>
    <string name="txt_decided_to">Decided to?</string>
    <string name="txt_save">Save</string>
    <string name="txt_score">Start Score</string>
    <!-- Keys -->
    <string name="key_tid">tID</string>
    <string name="key_team_name">team_name</string>
    <string name="key_team_location">team_location</string>
    <string name="key_team_id">team_id</string>
    <string name="key_player_name">player_name</string>
    <string name="key_player_state">player_state</string>
    <string name="key_player_id">player_id</string>
    <string name="txt_team_name">Team Name</string>
    <string name="txt_batsman">Batsman</string>
    <string name="txt_bowler">Bowler</string>
    <string name="txt_this_over">This Over</string>
    <string name="txt_r">R</string>
    <string name="txt_b">B</string>
    <string name="txt_4s">4s</string>
    <string name="txt_6s">6s</string>
    <string name="txt_sr">SR</string>
    <string name="txt_o">O</string>
    <string name="txt_m">M</string>
    <string name="txt_w">W</string>
    <string name="txt_er">ER</string>
    <string name="txt_wide">Wide</string>
    <string name="txt_no_ball">No Ball</string>
    <string name="txt_byes">Byes</string>
    <string name="txt_leg_byes">LB</string>
    <string name="txt_wicket">W</string>
    <string name="txt_r_0">0</string>
    <string name="txt_r_1">1</string>
    <string name="txt_r_2">2</string>
    <string name="txt_r_3">3</string>
    <string name="txt_r_4">4</string>
    <string name="txt_r_5">5</string>
    <string name="txt_r_6">6</string>
    <string name="txt_unable_to_create_more_team">Unable to create more then 6 team.</string>

    <string name="select_sticker">Select Stricker Details</string>
    <string name="hint_stricker">Enter the stricker name</string>
    <string name="hint_non_stricker">Enter the non-stricker name</string>
    <string name="hint_bowller">Enter the bowler name</string>
</resources>