<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StickerSelectionFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:minWidth="450dp"
            android:minHeight="50dp"
            android:text="@string/select_sticker"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ibtn_close"
            style="@style/myButtontheme"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:hint="@string/hint_stricker"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
       <AutoCompleteTextView
           android:id="@+id/stickerName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:textSize="14sp">
       </AutoCompleteTextView>

   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_non_stricker"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <AutoCompleteTextView
            android:id="@+id/nonstickerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp">
        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_bowller"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <AutoCompleteTextView
                android:id="@+id/bowlerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp">
            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_CreateTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_save"
            android:backgroundTint="@color/purple_500"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</LinearLayout>