<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPlayerName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Player Name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtO"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtM"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_m"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txt_R"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_r"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtW"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_w"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtER"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_er"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:padding="5dp"/>
    </LinearLayout>

</LinearLayout>