<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CreateNewTeamFragment"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:minWidth="400dp"
            android:minHeight="50dp"
            android:text="@string/txt_create_team"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ibtn_close"
            style="@style/myButtontheme"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/marigin_20dp">

    <EditText
        android:id="@+id/etTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_team_name"/>
    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_location"/>

        <Button
            android:id="@+id/btn_CreateTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_create_team"
            android:backgroundTint="@color/purple_500"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>