<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragments.TournamentListFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llNewtournament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/no_tournament"
                    android:fitsSystemWindows="true">
                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no_tournament"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no_tournament_discripion"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/marigin_10dp"/>

                <Button
                    android:id="@+id/btn_createTournament"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/txt_create_tournament"
                    android:backgroundTint="@color/purple_500"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTournamentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tournament"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marigin_10dp"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>