<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner1"
            android:fitsSystemWindows="true"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="M A Chidambaram Stadium"
            android:gravity="start"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_tournament_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Partnership Cricket Leaugue"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/marigin_10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="vickey"
            android:gravity="start"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_tournament_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="01 Apr 2022 - 15 Mar 2022"
            android:gravity="start"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btn_start_match"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/txt_start_match"
                style="@style/myButtontheme"/>
            <Button
                android:id="@+id/btn_create_team"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/txt_create_team"
                style="@style/myButtontheme"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Teams"
                android:gravity="start"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/team_grid_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marigin_10dp"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:id="@+id/llNoTeams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_add_team_discription"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_go_to_add_team"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:background="@drawable/search_bar_border"/>

                </LinearLayout>

            </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_top_players"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_most_run"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:gravity="center"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_player_name"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_most_wickets"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:gravity="center"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_player_name"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>